k8s/old/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-app
  labels:
    app: devsecops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsecops-app
  template:
    metadata:
      labels:
        app: devsecops-app
    spec:
      containers:
      - name: app
        image: your-dockerhub-username/devsecops-app:latest
        ports:
        - containerPort: 5000
